--- a/Idea_collection_system/views/contact.html
+++ b/Idea_collection_system/views/contact.html
@@ -59,7 +59,7 @@
                 </div>
             </a>
             <a href="contact.html">
-                <div class="nav-item active">
+                <div class="nav-item active nav-contact-link">
                     <p>Contact</p>
                 </div>
             </a>
