--- a/Idea_collection_system/views/profile.html
+++ b/Idea_collection_system/views/profile.html
@@ -58,7 +58,7 @@
                 </div>
             </a>
             <a href="contact.html">
-                <div class="nav-item">
+                <div class="nav-item nav-contact-link">
                     <p>Contact</p>
                 </div>
             </a>
@@ -188,7 +188,7 @@
 
     </footer>
 
-    
+
     <script defer src="./js/profile.js"></script>
 
 </body>
