--- a/Idea_collection_system/views/ideas.html
+++ b/Idea_collection_system/views/ideas.html
@@ -58,7 +58,7 @@
                 </div>
             </a>
             <a href="contact.html">
-                <div class="nav-item">
+                <div class="nav-item nav-contact-link">
                     <p>Contact</p>
                 </div>
             </a>
