--- a/Idea_collection_system/views/stats.html
+++ b/Idea_collection_system/views/stats.html
@@ -53,7 +53,7 @@
                 </div>
             </a>
             <a href="contact.html">
-                <div class="nav-item">
+                <div class="nav-item nav-contact-link">
                     <p>Contact</p>
                 </div>
             </a>
